--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,15 @@
 @use "normalize";
+@use "variables";
+
+@font-face {
+  font-family: "PoppinsRegular";
+  font-style: normal;
+  src: url("./assets/fonts/poppins/Poppins-Regular.ttf");
+}
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, 'PoppinsRegular',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
