--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -3,6 +3,11 @@
 
 $padding-left: 20px;
 
+@mixin details-height {
+  height: 20px;
+  line-height: 20px;
+}
+
 @mixin ellipsis-overflow {
   overflow: hidden;
   white-space: nowrap;
@@ -98,13 +103,20 @@ $button-background-light-orange: #faeee8;
           margin-bottom: 5px;
         }
       }
+
+      .card-general-info-details-updated {
+        @include details-height;
+      }
+
       .card-general-info-details-total {
         @include utils.bold;
+        @include details-height;
       }
 
       .card-general-info-details-stage {
         padding: 2px 10px;
         border-radius: 50px;
+        @include details-height;
 
         &.in-progress {
           background-color: variables.$light-gray;
